# airgradient-rs

./: Cargo.toml  LICENSE.md  README.md  build.rs  justfile
.cargo/: config.toml
src/: config.rs  device.rs  lib.rs  metrics.rs  watchdog.rs  web.rs  wifi.rs
src/sensors/: mod.rs  pms5003t.rs  s8.rs  sensor_manager.rs  sgp41.rs  task.rs
