[package]
edition = "2024"
name = "airgradient"
rust-version = "1.95"
version = "0.1.0"

[[bin]]
name = "airgradient"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3", "unstable"] }
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2", features = [
  "esp32c3",
  "embassy",
  "esp-radio",
  "esp-alloc",
  "defmt",
] }
# If you want to use UART logging (i.e. espflash monitor), use esp-println.
esp-println = { version = "0.16", features = ["esp32c3", "defmt-espflash"] }
# If you use probe-rs, use defmt-rtt.
# See .cargo/config.toml for the default "cargo run" command.
# defmt-rtt = "1"
esp-backtrace = { version = "0.18", features = [
  "esp32c3",
  "defmt",
  "panic-handler",
] }
defmt = "1"
embassy-futures = "0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
critical-section = "1.2.0"

embassy-executor = { version = "0.9.1", features = [
  # "task-arena-size-12288", # This is not applicable on nightly, nor 0.9+
  "nightly",
] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embassy-net = { version = "0.8.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv4",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
picoserve = { version = "0.18.0", features = ["embassy"] }
# Use a dev branch because of a mess in dependencies on 0.17.1.
# picoserve = { branch = "development", git = "https://github.com/sammhicks/picoserve.git", features = [
#   "embassy",
# ] }
static_cell = { version = "2.1.1", features = ["nightly"] }
# heapless version should match picoserve?
heapless = "0.8"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = "1.0.0"
gas-index-algorithm = "0.1.3"
esp-wifi-sys = { version = "0.8.1", features = ["esp32c3"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
